--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.0.0",
@@ -53,6 +54,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.20",
+    "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.10",
     "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
